--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,6 +42,8 @@
   --off-black-rgb: 0, 0, 40;
   --box-shadow-1: 0px 3px 4px -1px var(--gray);
   --rounded-corners: 4px;
+  --footer-padding: 4rem;
+  --header-padding: 4rem;
 }
 
 h1,
@@ -242,7 +244,7 @@ main {
 }
 
 #content-wrap {
-  padding-bottom: 4rem; /* Footer height + space */
+  padding-bottom: var(--footer-padding); /* Footer height + space */
 }
 
 #footer {
