Begin moving contentables to redux state

--- a/app/assets/stylesheets/api/documents.scss
+++ b/app/assets/stylesheets/api/documents.scss
@@ -373,6 +373,8 @@
     }
 
     & .droppable-container {
+      position: relative;
+      
       & .droppable-item {
         position: absolute;
         border: 1px dashed gray;
