Change content_field partial to return docId; get DnD working OK

--- a/app/assets/stylesheets/api/documents.scss
+++ b/app/assets/stylesheets/api/documents.scss
@@ -356,7 +356,7 @@
     display: flex;
     justify-content: flex-start;
 
-    & .field-side-bar {
+    & .side-bar {
       width: calc(250px - 2rem);
       margin-right: 1rem;
       position: fixed;
@@ -365,10 +365,23 @@
       padding-left: 2rem;
       text-align: center;
 
-      & div.droppable {
-        padding: 0.5rem 1rem;
-        z-index: inherit;
-        cursor: move;
+      & .assignees-list {
+        text-align: left;
+
+        & input {
+          margin-right: 1rem;
+          margin-bottom: 0.5rem;
+        }
+      }
+
+      & ul {
+        list-style: none;
+
+        & li.droppable {
+          padding: 0.5rem 1rem;
+          z-index: inherit;
+          cursor: move;
+        }
       }
     }
 
