--- a/app/assets/stylesheets/api/documents.scss
+++ b/app/assets/stylesheets/api/documents.scss
@@ -377,10 +377,14 @@
       & ul {
         list-style: none;
 
-        & li.droppable {
+        & li.draggable {
           padding: 0.5rem 1rem;
           z-index: inherit;
           cursor: move;
+
+          &.disabled-drag {
+            cursor: not-allowed;
+          }
         }
       }
     }
@@ -453,3 +457,4 @@
     }
   }
 }
+
