--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,374 +11,9 @@
   * It is generally better to create a new file per style scope.
   *
   *= require normalize.css
+  *= require basic.scss
+  *= require nav.scss
+  *= require flex.scss
   *= require_tree .
   *= require_self
   */
-
-:root {
-  --default-font-family: 'Roboto';
-  --header-font-family: 'Titillium Web';
-  --monospace-font-family: 'Roboto Mono';
-  --main-blue: #005cb9;
-  --call-to-action-blue: #006ff9;
-  --bright-blue: #0bc6ff;
-  --teal: #277cb2;
-  --dark-blue: #000028;
-  --powder-blue: #e1f4f8;
-  --lime-green: #d6fb00;
-  --green: #00ee00;
-  --success-green: #007831;
-  --pink: #ff3bdd;
-  --yellow: #f6b610;
-  --dark-yellow: #e1a205;
-  --yellow-hover: #1951b8;
-  --gray: #737373;
-  --light-gray: #bebfc0;
-  --lighter-gray: #f4f4f4;
-  --background-white: #fcfcfc;
-  --background-white-rgb: 252, 252, 252;
-  // --off-black: #1e1e1e;
-  --off-black: #000028;
-  --off-black-rgb: 0, 0, 40;
-  --box-shadow-1: 0px 3px 4px -1px var(--gray);
-  --rounded-corners: 4px;
-  --footer-padding: 4rem;
-  --header-padding: 4rem;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: var(--header-font-family), Helvetica, Arial, sans-serif;
-  font-weight: 400;
-}
-
-body {
-  font-family: var(--default-font-family), Helvetica, Arial, sans-serif;
-  font-weight: 400;
-  background-color: var(--background-white);
-  color: var(--off-black);
-}
-
-code,
-kbd,
-pre,
-samp {
-  font-family: var(--monospace-font-family), monospace;
-}
-
-a {
-  text-decoration: none;
-  &.inline-link {
-    margin: 0 1rem;
-  }
-}
-
-button,
-a.a-as-button {
-  border: 0;
-  border-radius: 0.25rem;
-  font-size: 1rem;
-  line-height: 1.2;
-  white-space: nowrap;
-  text-decoration: none;
-  padding: 0.25rem 0.5rem;
-  margin: 0.25rem;
-  cursor: pointer;
-  box-shadow: var(--box-shadow-1);
-
-  &:hover {
-    background-color: var(--yellow);
-  }
-
-  &.flat {
-    box-shadow: none;
-
-    &:hover {
-      box-shadow: none;
-    }
-  }
-
-  &.warn {
-    background-color: transparent;
-    font-weight: lighter;
-    color: var(--gray);
-    &:hover {
-      color: red;
-    }
-  }
-
-  & a {
-    color: inherit;
-  }
-
-  &[disabled] {
-    opacity: 0.5;
-    pointer-events: none;
-  }
-  &[aria-pressed='true'] {
-    box-shadow: none;
-  }
-}
-
-label {
-  margin-bottom: 1rem;
-
-  & > input {
-    margin-top: 0.5rem;
-  }
-}
-
-
-textarea,
-input:not([type='radio']) {
-  height: 2rem;
-  width: 100%;
-  border-radius: 3px;
-  border: 1px solid transparent;
-  border-top: none;
-  border-bottom: 1px solid #ddd;
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.39), 0 -1px 1px #fff, 0 1px 0 #fff;
-  padding: 0 0.5rem;
-  box-sizing: border-box;
-}
-
-textarea {
-  resize: vertical;
-}
-
-header {
-  position: sticky;
-  -webkit-position: sticky;
-  width: 100%;
-  height: 80px;
-  border-bottom: 1px solid var(--lighter-gray);
-
-  top: -16px; /* negative top allows for 16 pixels of movement before sticking */
-  z-index: 1;
-
-  // box-shadow: 0px 2px 4px #2225;
-  /* fix weird flickering issue in chrome: https://stackoverflow.com/a/22224884/286685 */
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-}
-
-/* PSEUDO ELEMENTS to create drop-shadow */
-header::before,
-header::after {
-  content: '';
-  display: block;
-  height: 16px;
-  /* make pseudo elements sticky as well */
-  position: sticky;
-  -webkit-position: sticky;
-  background-color: var(--background-white);
-}
-
-/* SHADOW */
-header::before {
-  top: 48px; /* shadow is at bottom of element, so at 48 + 16 = 64px */
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
-}
-
-/* COVER */
-// header::after {
-//   /* linear gradient from background color to transparent acts as
-//      a transition effect so the shadow appears gradually */
-//   // background: linear-gradient(
-//   //   var(--background-white) 10%,
-//   //   rgba(var(--background-white-rgb), 0.8) 50%,
-//   //   rgba(var(--background-white-rgb), 0.4) 70%,
-//   //   transparent
-//   // );
-//   top: 0;
-//   /* cover should fall over shadow */
-//   z-index: 2;
-// }
-
-nav {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding: 0 20px;
-  align-content: baseline;
-  height: 64px;
-  position: sticky;
-  -webkit-position: sticky;
-  top: 0px;
-  /* compensate for shadow with negative margin */
-  margin-top: -16px;
-  /* content should fall over shadow and cover */
-  z-index: 3;
-  background: var(--background-white);
-
-  & h1 {
-    & a,
-    & a:visited,
-    & a:hover,
-    & a:active {
-      color: inherit;
-    }
-  }
-}
-
-main {
-  width: 80%;
-  margin: auto;
-}
-
-// footer {
-//   background: #ffab62;
-//   width: 100%;
-//   height: 100px;
-//   position: absolute;
-//   bottom: 0;
-//   left: 0;
-// }
-
-#page-container {
-  position: relative;
-  min-height: 100vh;
-}
-
-#content-wrap {
-  padding-bottom: var(--footer-padding); /* Footer height + space */
-}
-
-#footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 2.5rem; /* Footer height */
-  border-top: 1px solid var(--lighter-gray);
-  background-color: var(--lighter-gray);
-  padding-top: 0.5rem;
-}
-
-.nav-links {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: baseline;
-  height: 100%;
-  margin: 0;
-
-  & > li {
-    list-style: none;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-  }
-
-  & a {
-    display: block;
-    height: 100%;
-    margin: 0;
-    padding: 24px 10px;
-    background: transparent;
-    text-decoration: none;
-    color: inherit;
-    cursor: pointer;
-    box-sizing: border-box;
-
-    &:hover {
-      background-color: rgba(240, 240, 240, 0.61);
-      border-bottom: 2px solid lightgray;
-    }
-  }
-
-  & button.signout {
-    padding: 1rem 0.5rem;
-    margin: 0 0.5rem;
-  }
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-  font-family: 'Titillium Web', 'Roboto';
-  text-align: left;
-
-  & button {
-    padding: 0.5rem 1rem;
-    margin: 1rem 0 0 0;
-    text-transform: uppercase;
-    width: 100%;
-    box-shadow: var(--box-shadow-1);
-    &:hover {
-      background: var(--dark-yellow);
-    }
-  }
-
-  & button[type='submit'] {
-    background: var(--yellow);
-    &:hover {
-      background: var(--dark-yellow);
-    }
-  }
-
-  & .footer-links {
-    font-size: 0.8rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    & p {
-      margin: 10px 0 0 0;
-    }
-  }
-}
-
-li.no-pointer {
-  cursor: default;
-}
-
-.z1 {
-  z-index: 1;
-}
-
-.card {
-  background-color: var(--background-white);
-  box-shadow: var(--box-shadow-1);
-  border-radius: var(--rounded-corners);
-  margin: 1rem;
-  padding: 1rem;
-  position: relative;
-}
-
-.small {
-  font-size: 80%;
-  & a,
-  & a:visited {
-    color: #999;
-
-    &:hover {
-      text-decoration: underline 1px dotted;
-    }
-  }
-}
-
-.smallest {
-  font-size: 70%;
-}
-
-.modal-background {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  background: rgba(var(--off-black-rgb), 0.7);
-  z-index: 10;
-}
-
-.modal-child {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
