Profile updated slightly

--- a/app/assets/stylesheets/api/session.scss
+++ b/app/assets/stylesheets/api/session.scss
@@ -37,8 +37,8 @@
 
 .helper-text {
   font-size: 0.8rem;
-  margin: 0 1rem;
   margin: -0.75rem 0 1rem 1rem;
+  max-width: 245px;
 
   & p {
     margin-bottom: -0.5rem;
