--- a/app/assets/stylesheets/api/content_fields.scss
+++ b/app/assets/stylesheets/api/content_fields.scss
@@ -3,27 +3,40 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .content-field {
-  background-color: var(--background-white);
+  background-color: rgba(255, 255, 255, 0.7);
   position: absolute;
-  border: 1px dashed var(--light-gray);
-  border-radius: 4px;
-  box-sizing: border-box;
+  border: 1px solid var(--off-black);
+  border-radius: 6px;
   // padding: 0.5rem 1rem;
   z-index: 2;
+  box-shadow: var(--box-shadow-1);
 
   &.draggable-item {
     cursor: move;
   }
 
-    & .content-field-description {
-      & button.close.flat {
-        float: right;
-        display: block;
-        padding: 2px;
-        margin: 0;
-        background-color: transparent;
-      }
+  & .content-field-description {
+    height: 100%;
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--off-black);
+    font-family: var(--default-font-family);
+    font-weight: bold;
+
+    & button.close.flat {
+      float: right;
+      display: block;
+      padding: 2px;
+      margin: 0;
+      background-color: transparent;
+      position: absolute;
+      right: 5px;
+      top: 0;
     }
+  }
 }
 
 .signature-box {
@@ -34,7 +47,6 @@
   color: rgb(111, 111, 138);
   text-overflow: ellipsis;
   overflow: hidden;
-
 }
 
 .textbox-box {
