--- a/app/assets/stylesheets/api/documents.scss
+++ b/app/assets/stylesheets/api/documents.scss
@@ -66,7 +66,7 @@
   }
 
   & .doc-show-header {
-    padding: 1rem;
+    padding: 1rem 1rem 1rem 2rem;
     border-bottom: 1px solid var(--light-gray);
 
     & h2 {
@@ -93,6 +93,7 @@
   }
 
   & .doc-show-recipients {
+    padding-left: 2rem;
     & h3 {
       margin-bottom: 1rem;
     }
