--- a/app/assets/stylesheets/api/home.scss
+++ b/app/assets/stylesheets/api/home.scss
@@ -51,10 +51,13 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
 
     & .card {
       flex: 1 0 250px;
       line-height: 1.5;
+      max-width: 500px;
 
       & > a {
         color: inherit;
