--- a/app/assets/stylesheets/api/content_fields.scss
+++ b/app/assets/stylesheets/api/content_fields.scss
@@ -3,16 +3,23 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .content-field {
-  background-color: rgba(255, 255, 255, 0.7);
   position: absolute;
-  border: 1px solid var(--off-black);
-  border-radius: 6px;
-  // padding: 0.5rem 1rem;
   z-index: 2;
-  box-shadow: var(--box-shadow-1);
 
   &.draggable-item {
     cursor: move;
+  }
+
+  &.fillable {
+    background-color: rgba(255, 255, 255, 0.7);
+    border: 1px solid var(--off-black);
+    border-radius: 6px;
+    box-shadow: var(--box-shadow-1);
+
+    &.signable {
+      cursor: pointer;
+      box-shadow: 0px 0px 6px 3px rgba(255, 255, 0, 0.7);
+    }
   }
 
   & .content-field-description {
