--- a/app/assets/stylesheets/basic.scss
+++ b/app/assets/stylesheets/basic.scss
@@ -261,3 +261,10 @@ li.no-pointer {
   display: block;
   margin-left: 2rem;
 }
+
+circle {
+  transition: stroke-dashoffset 0.35s;
+  transform: translateY(-20%) rotate(-90deg);
+  transform-origin: 50% 50%;
+  stroke: var(--teal);
+}
