--- a/app/assets/stylesheets/api/documents.scss
+++ b/app/assets/stylesheets/api/documents.scss
@@ -85,11 +85,21 @@
       background-color: transparent;
     }
 
-    & div:last-child {
+    & .action-buttons {
       margin-top: 1rem;
       display: flex;
       justify-content: space-between;
-      align-items: center;
+      align-items: baseline;
+
+      & button.flat {
+        padding: 0;
+        margin: 0 1rem;
+
+        &.disabled {
+          cursor: not-allowed;
+          color: var(--gray);
+        }
+      }
     }
   }
 
