--- a/app/assets/stylesheets/basic.scss
+++ b/app/assets/stylesheets/basic.scss
@@ -58,6 +58,14 @@ a {
   &.inline-link {
     margin: 0 1rem;
   }
+
+  & .disabled {
+    cursor: not-allowed;
+    opacity: 0.5;
+    text-decoration: none;
+    display: inline-block;  /* For IE11/ MS Edge bug */
+    pointer-events: none;
+  }
 }
 
 button,
