--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -60,8 +60,7 @@ nav {
       &.active {
         color: var(--main-blue);
         border-bottom: 3px solid var(--main-blue);
-        pointer-events: none;
-        cursor: none;
+        // pointer-events: none;
       }
     }
 
