--- a/app/assets/stylesheets/api/home.scss
+++ b/app/assets/stylesheets/api/home.scss
@@ -1,42 +1,86 @@
 .home {
-  .top-background-gradient {
-    height: 250px;
+  & .top-background-gradient {
+    height: 20rem;
     width: 100%;
     z-index: -1;
     position: absolute;
-    top: 0;
     left: 0;
     background: rgb(0, 91, 182);
     background: -moz-linear-gradient(
-      45deg,
+      55deg,
       rgba(0, 91, 182, 1) 0%,
       rgba(75, 154, 175, 1) 100%
     );
     background: -webkit-linear-gradient(
-      45deg,
+      55deg,
       rgba(0, 91, 182, 1) 0%,
       rgba(75, 154, 175, 1) 100%
     );
     background: linear-gradient(
-      45deg,
+      55deg,
       rgba(0, 91, 182, 1) 0%,
       rgba(75, 154, 175, 1) 100%
     );
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#005bb6",endColorstr="#4b9aaf",GradientType=1);
   }
 
-  .home-sig-link {
-    width: 300px;
-    height: 100px;
-    margin: 1rem;
-    position: relative;
+  & .top-actions {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: calc(100% - 2rem);
+    padding: 1rem;
+    flex-wrap: wrap;
 
-    a {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      z-index: 10;
-      cursor: pointer;
+    & .summary {
+      display: flex;
+      justify-content: space-between;
+      flex: 1;
+      min-height: 100px;
+      min-width: 120px;
+      align-items: center;
+      margin: 1rem;
+      color: var(--off-black);
+
+      .vert-bar {
+        min-height: 4rem;
+        border-right: 2px solid var(--off-black);
+      }
+
+      & a {
+        min-width: 100px;
+        color: inherit;
+        text-align: center;
+        padding: 0.5rem;
+
+        &:visited {
+          color: inherit;
+        }
+
+        & .num {
+          display: inline-block;
+          width: 100%;
+          font-size: 2rem;
+          line-height: 1.5;
+        }
+      }
+    }
+
+    & .home-sig-link {
+      flex: 1;
+      width: 300px;
+      height: 100px;
+      margin: 1rem;
+      position: relative;
+      min-width: 300px;
+
+      & a {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        z-index: 10;
+        cursor: pointer;
+      }
     }
   }
 }
