--- a/app/assets/stylesheets/api/home.scss
+++ b/app/assets/stylesheets/api/home.scss
@@ -52,6 +52,8 @@
         color: inherit;
         text-align: center;
         padding: 0.5rem;
+        transition: 0.2s ease-in-out all;
+        border-radius: 4px;
 
         &:visited {
           color: inherit;
@@ -62,6 +64,9 @@
           width: 100%;
           font-size: 2rem;
           line-height: 1.5;
+        }
+        &:hover {
+          background: #fff3;
         }
       }
     }
