--- a/app/assets/stylesheets/api/documents.scss
+++ b/app/assets/stylesheets/api/documents.scss
@@ -207,135 +207,133 @@
   }
 }
 
-.index-container {
+#index-container {
   position: absolute;
-  top: 80px;
-  left: 0px;
   width: 100%;
-  height: calc(100% - 80px - 4rem);
-}
-
-.index-sidebar {
-  // color: rgb(77, 77, 77);
-  height: 100%;
-  background-color: var(--lighter-gray);
-  width: 200px;
+  height:  calc(100% - 2.5rem);
   display: flex;
-  flex-direction: column;
-  align-items: center;
 
-  & a {
-    width: calc(220px - 2rem);
-    box-sizing: border-box;
-    font-size: 80%;
-    color: inherit;
-    padding: 0.5rem 1rem;
-    margin: 1rem 0 0 0 !important;
-    text-transform: uppercase;
-    background-color: var(--yellow);
-    text-align: center;
+  & .index-sidebar {
+    height: 100%;
+    background-color: var(--lighter-gray);
+    min-width: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-    &:hover {
-      background-color: var(--dark-yellow);
-    }
-    &:visted {
+    & a {
+      width: calc(220px - 2rem);
+      box-sizing: border-box;
+      font-size: 80%;
       color: inherit;
+      padding: 0.5rem 1rem;
+      margin: 1rem 0 0 0 !important;
+      text-transform: uppercase;
+      background-color: var(--yellow);
+      text-align: center;
+
+      &:hover {
+        background-color: var(--dark-yellow);
+      }
+      &:visted {
+        color: inherit;
+      }
     }
   }
-}
 
-.index-inbox {
-  position: fixed;
-  left: 220px;
-  top: 80px;
-  padding: 1rem 0;
-  width: 100%;
-  overflow: scroll;
-  height: calc(100% - 5.5rem - 4rem);
-
-  & .search-bar {
-    max-height: 80px;
-  }
-
-  & h2 {
-    margin-top: 0;
-    margin-left: 1rem;
-  }
-
-  & .docs-index {
-    display: grid;
-    grid-template-columns: 50px minmax(200px, auto) 1fr 1fr minmax(100px, auto);
-    grid-auto-flow: row;
-    grid-gap: 1rem 0;
+  & .index-inbox {
+ 
+    padding: 1rem 0;
     width: 100%;
+    overflow: scroll;
 
-    & .docs-index-header {
-      grid-column: 1/-1;
-      border-top: 1px solid var(--lighter-gray);
-      border-bottom: 1px solid var(--lighter-gray);
-      padding: 0.5rem 0;
-      font-weight: bold;
-
-      &:nth-child(1n) {
-        padding: 0.5rem 0;
-      }
-
-      &:nth-child(1) {
-        grid-column: 1/2;
-        padding-left: 0;
-      }
-      &:nth-child(2) {
-        grid-column: 2/3;
-      }
-      &:nth-child(3) {
-        grid-column: 3/4;
-      }
-      &:nth-child(4) {
-        grid-column: 4/5;
-      }
-      &:nth-child(5) {
-        grid-column: 5/6;
-      }
-
-      & div {
-        padding: 0.5rem;
-      }
+    & .search-bar {
+      max-height: 80px;
     }
 
-    & .docs-index-subject {
-      display: flex;
-      flex-direction: column;
-      padding-right: 1rem;
-      line-height: 1.3;
+    & h2 {
+      margin-top: 0;
+      margin-left: 2rem;
+    }
 
-      & a,
-      & .docs-index-title {
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        overflow: hidden;
-        // color: inherit;
+    & .docs-index {
+      display: grid;
+      grid-template-columns: 2rem minmax(200px, auto) 1fr 1fr minmax(
+          100px,
+          auto
+        );
+      grid-auto-flow: row;
+      grid-gap: 1rem 0;
+      width: 100%;
 
-        // &:visited {
-        //   // color: inherit;
-        // }
-        &:hover {
-          color: var(--main-blue);
+      & .docs-index-header {
+        grid-column: 1/-1;
+        border-top: 1px solid var(--lighter-gray);
+        border-bottom: 1px solid var(--lighter-gray);
+        padding: 0.5rem 0;
+        font-weight: bold;
+
+        &:nth-child(1n) {
+          padding: 0.5rem 0;
+        }
+
+        &:nth-child(1) {
+          grid-column: 1/2;
+          padding-left: 0;
+        }
+        &:nth-child(2) {
+          grid-column: 2/3;
+        }
+        &:nth-child(3) {
+          grid-column: 3/4;
+        }
+        &:nth-child(4) {
+          grid-column: 4/5;
+        }
+        &:nth-child(5) {
+          grid-column: 5/6;
+        }
+
+        & div {
+          padding: 0.5rem;
         }
       }
 
-      & .docs-index-recipients,
-      & .docs-index-owner {
-        color: var(--light-gray);
-        font-size: 90%;
-      }
+      & .docs-index-subject {
+        display: flex;
+        flex-direction: column;
+        padding-right: 1rem;
+        line-height: 1.3;
 
-      & .docs-index-recipients > p {
-        margin: 0;
+        & a,
+        & .docs-index-title {
+          text-overflow: ellipsis;
+          white-space: nowrap;
+          overflow: hidden;
+          // color: inherit;
+
+          // &:visited {
+          //   // color: inherit;
+          // }
+          &:hover {
+            color: var(--main-blue);
+          }
+        }
+
+        & .docs-index-recipients,
+        & .docs-index-owner {
+          color: var(--light-gray);
+          font-size: 90%;
+        }
+
+        & .docs-index-recipients > p {
+          margin: 0;
+        }
       }
-    }
-    & > div {
-      padding: 0.5rem 0;
-      border-bottom: 1px solid var(--lighter-gray);
+      & > div {
+        padding: 0.5rem 0;
+        border-bottom: 1px solid var(--lighter-gray);
+      }
     }
   }
 }
