--- a/app/assets/stylesheets/basic.scss
+++ b/app/assets/stylesheets/basic.scss
@@ -269,6 +269,7 @@ circle {
 
 #footer {
   position: absolute;
+  z-index: 10;
   bottom: 0;
   width: 100%;
   height: 2.5rem; /* Footer height */
