--- a/app/assets/stylesheets/basic.scss
+++ b/app/assets/stylesheets/basic.scss
@@ -5,6 +5,7 @@
   --main-blue: #005cb9;
   --dark-main-blue: #004386;
   --call-to-action-blue: #006ff9;
+  --call-to-action-blue-rgb: rgb(0,111,249);
   --bright-blue: #0bc6ff;
   --teal: #277cb2;
   --dark-blue: #000028;
